--- a/PMR/package.json
+++ b/PMR/package.json
@@ -44,7 +44,7 @@
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.2",
     "expo-location": "^18.0.5",
-    "expo-media-library": "^17.0.5",
+    "expo-media-library": "~17.0.5",
     "expo-router": "^4.0.5",
     "expo-secure-store": "^14.0.1",
     "expo-splash-screen": "~0.29.18",
@@ -72,8 +72,7 @@
     "react-native-vision-camera": "^4.6.3",
     "react-native-web": "~0.19.10",
     "tesseract.js": "^6.0.0",
-    "vision-camera-ocr": "^1.0.0",
-    "expo-media-library": "~17.0.5"
+    "vision-camera-ocr": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
