--- a/PMR/app.json
+++ b/PMR/app.json
@@ -34,7 +34,8 @@
         "android.permission.INTERNET",
         "android.permission.ACCESS_NETWORK_STATE",
         "android.permission.ACCESS_WIFI_STATE",
-        "android.permission.FOREGROUND_SERVICE"
+        "android.permission.FOREGROUND_SERVICE",
+        "android.permission.INTERNET"
         
       ],
       "package": "com.anonymous.telephone"
@@ -46,7 +47,6 @@
     },
     "plugins": [
       "expo-router",
-      "expo-build-properties",
       "expo-font",
       [
         "expo-camera",
@@ -59,6 +59,14 @@
         "expo-image-picker",
         {
           "photosPermission": "L'application nécessite l'accès à vos photos."
+        }
+      ],
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "usesCleartextTraffic": true
+          }
         }
       ]
     ],
