--- a/PMR/package.json
+++ b/PMR/package.json
@@ -47,6 +47,7 @@
     "expo-media-library": "~17.0.5",
     "expo-router": "^4.0.5",
     "expo-secure-store": "^14.0.1",
+    "expo-speech": "^13.0.1",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.2",
