--- a/PMR/app.json
+++ b/PMR/app.json
@@ -8,7 +8,7 @@
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/images/CMF_1.webp",
+      "image": "./assets/images/CMF_1.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -21,15 +21,29 @@
       }
     },
     "android": {
+      "usesCleartextTraffic": true,
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/CMF.png",
         "backgroundColor": "#ffffff"
+      },
+      "config": {
+        "googleMaps": {
+          "apiKey": "pas la"
+        }
       },
       "permissions": [
         "android.permission.CAMERA",
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.ACCESS_COARSE_LOCATION",
         "android.permission.READ_EXTERNAL_STORAGE",
         "android.permission.WRITE_EXTERNAL_STORAGE",
-        "android.permission.RECORD_AUDIO"
+        "android.permission.RECORD_AUDIO",
+        "android.permission.INTERNET",
+        "android.permission.ACCESS_NETWORK_STATE",
+        "android.permission.ACCESS_WIFI_STATE",
+        "android.permission.FOREGROUND_SERVICE",
+        "android.permission.INTERNET"
+        
       ],
       "package": "com.anonymous.telephone"
     },
@@ -40,7 +54,6 @@
     },
     "plugins": [
       "expo-router",
-      "expo-build-properties",
       "expo-font",
       [
         "expo-camera",
@@ -54,6 +67,14 @@
         {
           "photosPermission": "L'application nécessite l'accès à vos photos."
         }
+      ],
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "usesCleartextTraffic": true
+          }
+        }
       ]
     ],
     "experiments": {
@@ -64,8 +85,11 @@
         "origin": false
       },
       "eas": {
-        "projectId": "a2de0759-97f3-416d-ae49-cf518e0990d0"
+        "projectId": "beb839e6-a433-4c40-9c4d-f1d149521688"
       }
+    },
+    "updates": {
+      "enabled": true
     }
   }
 }
