--- a/PMR/package.json
+++ b/PMR/package.json
@@ -14,78 +14,37 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/checkbox": "^0.5.17",
-    "@react-native-community/datetimepicker": "^8.2.0",
-    "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-firebase/app": "^21.2.0",
-    "@react-native-firebase/auth": "^21.2.0",
-    "@react-native-mapbox-gl/maps": "^8.5.0",
-    "@react-native-ml-kit/text-recognition": "^1.5.2",
-    "@react-native-picker/picker": "^2.11.0",
-    "@react-native/virtualized-lists": "^0.77.0",
-    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^7.0.14",
-    "@react-navigation/native-stack": "^7.0.2",
-    "@react-navigation/stack": "^7.1.1",
-    "@rnmapbox/maps": "^10.1.33",
-    "axios": "^1.7.9",
-    "expo": "^52.0.23",
-    "expo-app-loading": "^2.1.1",
-    "expo-blur": "^14.0.2",
-    "expo-build-properties": "~0.13.1",
-    "expo-camera": "^16.0.10",
-    "expo-constants": "~17.0.3",
-    "expo-file-system": "~18.0.7",
-    "expo-font": "~13.0.2",
-    "expo-image-manipulator": "^13.0.6",
-    "expo-image-picker": "^16.0.3",
-    "expo-linear-gradient": "^14.0.2",
-    "expo-linking": "~7.0.2",
-    "expo-location": "^18.0.5",
-    "expo-media-library": "~17.0.5",
-    "expo-router": "^4.0.5",
+    "axios": "^1.8.1",
+    "expo": "^52.0.37",
+    "expo-build-properties": "^0.13.2",
+    "expo-camera": "^16.0.17",
+    "expo-file-system": "^18.0.11",
+    "expo-image-picker": "^16.0.6",
+    "expo-media-library": "^17.0.6",
+    "expo-router": "^4.0.17",
     "expo-secure-store": "^14.0.1",
     "expo-speech": "^13.0.1",
-    "expo-splash-screen": "~0.29.18",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.2",
-    "expo-web-browser": "~14.0.1",
-    "firebase": "^11.0.1",
-    "install": "^0.13.0",
-    "lucide-react": "^0.469.0",
-    "moment": "^2.30.1",
+    "expo-status-bar": "^2.0.1",
+    "firebase": "^11.4.0",
+    "lucide-react": "^0.477.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.1",
-    "react-native-bcrypt": "^2.4.0",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-maps": "^1.20.1",
-    "react-native-paper": "^5.12.5",
-    "react-native-qrcode-svg": "^6.3.14",
+    "react-native": "0.76.7",
+    "react-native-maps": "1.18.0",
+    "react-native-paper": "^5.13.1",
+    "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.11.1",
-    "react-native-tesseract-ocr": "^2.0.3",
-    "react-native-text-recognition": "^1.0.2",
-    "react-native-vision-camera": "^4.6.3",
-    "react-native-web": "~0.19.10",
-    "tesseract.js": "^6.0.0",
-    "vision-camera-ocr": "^1.0.0"
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "^4.4.0",
+    "react-native-svg": "15.8.0"
   },
+  "private": true,
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@react-native-community/cli": "^15.1.3",
-    "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
-    "@types/react-native": "^0.72.8",
-    "@types/react-test-renderer": "^18.0.7",
-    "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
-    "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
-  },
-  "private": true
+    "@react-native-community/cli": "^17.0.0",
+    "@types/react": "^18.3.18"
+  }
 }
